// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`discovers through HTTP, isolates same-named session attachments, runs a tool and requires explicit reattachment after restart 1`] = `
[
  {
    "content": [
      {
        "text": "{"invoice":"tenant-a"}",
        "type": "text",
      },
    ],
    "isError": false,
    "toolCallId": "a",
    "type": "tool-result",
  },
]
`;

exports[`installs native tools through the profile API, isolates private state and recovers without replay 1`] = `
[
  {
    "content": [
      {
        "text": "empty",
        "type": "text",
      },
    ],
    "isError": false,
    "toolCallId": "a",
    "type": "tool-result",
  },
]
`;

exports[`installs native tools through the profile API, isolates private state and recovers without replay 2`] = `
[
  {
    "content": [
      {
        "text": "empty",
        "type": "text",
      },
    ],
    "isError": false,
    "toolCallId": "a",
    "type": "tool-result",
  },
  {
    "content": [
      {
        "text": "apple",
        "type": "text",
      },
    ],
    "isError": false,
    "toolCallId": "c",
    "type": "tool-result",
  },
]
`;

exports[`transfers canonical MCP fields through admitted execution, persists references and never replays lost mutations 1`] = `
[
  {
    "content": [
      {
        "text": "Rendered text deliberately omits canonical values.",
        "type": "text",
      },
      {
        "text": "Result reference: <result>; JSON Pointer root: structuredContent. Use call_with_result for exact argument transfer.",
        "type": "text",
      },
    ],
    "isError": false,
    "toolCallId": "search",
    "type": "tool-result",
  },
  {
    "content": [
      {
        "text": "{"result":"<result>","source":"/messages/1/nested/0/a~1b~0c","value":null,"truncated":false}",
        "type": "text",
      },
    ],
    "isError": false,
    "toolCallId": "select",
    "type": "tool-result",
  },
  {
    "content": [
      {
        "text": "Error: tool "mcp__fixture__read" requires approval (not yet supported) If execution started, the outcome may be uncertain; do not automatically replay mutations.",
        "type": "text",
      },
    ],
    "isError": true,
    "toolCallId": "copy",
    "type": "tool-result",
  },
]
`;
